fix horizontal scrolling on mobile by hiding overflow on title

--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -48,6 +48,7 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
+  overflow: hidden;
 
   @include media(md) {
     left: auto;
